--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@
   .radio-label {
     @apply mb-2 ml-2 text-sm font-bold text-gray-700;
   }
+
+  /* For code challenge */
   .input-st {
     @apply w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none;
   }
